--- a/public/about.html
+++ b/public/about.html
@@ -2,7 +2,8 @@
 <p>Hi,</p> 
 <p>I'm Mykola, I'm software developer student from Finland. </p>
 <p>At my free-time I like to learn something new and improve my skills.
-    I've been interested in programming since I was a child, and I always wanted to create something useful and innovative. I believe that technology has the power to change the world, and I want to be a part of that change.</p>
+    I've been interested in programming since I was a child, and I always wanted to create something useful and innovative. 
+    I believe that technology has the power to change the world, and I want to be a part of that change.
 </p>
 <hr>
 <h2>My hobbies are:</h2>
