Fix education section in index.html
Updated the education section to include the location of Riveria Vocational College.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2>Education:</h2>
     <ul>
         <li>Compehensive School of Polvijärvi</li>
-        <li>Riveria Vocational Collage</li>
+        <li>Riveria Vocational Collage in Joensuu</li>
     </ul>
     <hr />
     <h2>Skills:</h2>
@@ -41,4 +41,5 @@
     <br>
     <a href="./public/contact.html">Contact me</a>
 </body>
+
 </html>
